# Kursach

./: CMakeLists.txt  main.cpp
Sources/: main.cpp
